<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/activity_padding"
    tools:context=".activities.UserDetails">

    <ProgressBar
        android:id="@+id/pro_bar_details"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_details_label"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/almost_done"
        app:layout_constraintTop_toBottomOf="@id/pro_bar_details" />

    <!--Firstname input layout-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/input_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/input_lastname"
        app:layout_constraintTop_toBottomOf="@id/tv_details_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_firstname"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <!--Lastname input layout-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/input_border"
        app:layout_constraintBottom_toBottomOf="@id/input_firstname"
        app:layout_constraintLeft_toRightOf="@id/input_firstname"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_lastname"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_map_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_vertical"
        android:text="@string/home_Add_desc"
        android:textColor="@color/report_text"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/input_lastname" />

    <!--Home Address input layout-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_home_Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/input_border"
        app:layout_constraintTop_toBottomOf="@id/tv_map_desc">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_home_add"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:drawableStart="@drawable/ic_pin_drop_black_24dp"
            android:focusable="false"
            android:hint="@string/set_home_address"
            android:inputType="textPostalAddress"
            android:longClickable="false" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_map_inst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_map_white_24dp"
        android:gravity="center_vertical"
        android:text="@string/choose_on_map"
        android:textColor="@color/report_text"
        app:layout_constraintBottom_toBottomOf="@id/bt_home_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bt_home_selector"
        app:layout_constraintTop_toTopOf="@id/bt_home_selector" />

    <!--Home button-->
    <Button
        android:id="@+id/bt_home_selector"
        style="@style/buttons_style"
        android:layout_width="70dp"
        android:layout_height="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_tiny"
        android:drawableStart="@drawable/ic_touch_app_black_24dp"
        android:gravity="center_vertical"
        android:onClick="Home_location_picker"
        android:padding="@dimen/margin_tiny"
        android:text="@string/map"
        android:textStyle="normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_home_Add" />

    <TextView
        android:id="@+id/tv_ice_label"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/emergency_contact_number_s"
        app:layout_constraintTop_toBottomOf="@id/bt_home_selector"
        />

    <!--Add button-->
    <Button
        android:id="@+id/bt_add"
        style="@style/small_button"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_med"
        android:background="@drawable/add_layer"
        android:onClick="add_ice_contact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ice_label"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_ice_contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/bt_reg_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bt_add"
        app:layout_constraintTop_toBottomOf="@id/tv_ice_label"
        />

    <Button
        android:id="@+id/bt_reg_submit"
        style="@style/buttons_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_large"
        android:onClick="submit_details"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>