<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/activity_padding"
    android:id="@+id/mobile_verification_parent"
    tools:context=".activities.Mobile_Verification">

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/main_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/portal_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <!--mobile number linear layout-->
    <LinearLayout
        android:id="@+id/linear_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/iv_main_logo">

        <TextView
            android:id="@+id/tv_instruct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/registration_instructions"
            android:textColor="@color/report_text"
            app:layout_constraintTop_toBottomOf="@id/iv_main_logo" />

        <!--mobile number input layout-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/input_border"
            android:padding="@dimen/margin_tiny"
            app:layout_constraintTop_toBottomOf="@id/tv_instruct">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_mobilenumber"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_smartphone_black_24dp"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:onClick="send_Verification_code"
            android:id="@+id/bt_send_code"
            style="@style/buttons_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/send_verification_code"
            app:layout_constraintTop_toBottomOf="@id/input_mobile" />

    </LinearLayout>

    <!--Confirmation code input layout-->
    <android.support.constraint.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/constraint_confirm_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/iv_main_logo">

        <TextView
            android:id="@+id/tv_code_instruct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/enter_verification_code"
            android:textColor="@color/report_text" />

        <!--verification code input layout-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/input_border"
            android:padding="@dimen/margin_tiny"
            app:layout_constraintTop_toBottomOf="@id/tv_code_instruct">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_verify_code"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/verification_code"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:onClick="verify_code"
            android:id="@+id/bt_verify_code"
            style="@style/buttons_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_med"
            android:text="@string/verify"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bt_resend_code"
            app:layout_constraintTop_toBottomOf="@id/input_verify_code" />

        <Button
            android:onClick="resend_code"
            android:id="@+id/bt_resend_code"
            style="@style/buttons_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:enabled="false"
            android:text="@string/resend"
            app:layout_constraintLeft_toRightOf="@id/bt_verify_code"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_verify_code" />

    </android.support.constraint.ConstraintLayout>

    <TextSwitcher
        android:visibility="gone"
        android:id="@+id/ts_verify_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:textColor="@color/report_text"
        app:layout_constraintBottom_toTopOf="@id/pro_bar_verify" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pro_bar_verify"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny"
        android:layout_marginBottom="@dimen/margin_small"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_confirm_code" />

</android.support.constraint.ConstraintLayout>