<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:id="@+id/user_profile_layout"
    tools:context=".activities.UserProfile">

    <!--editi button-->
    <Button
        android:id="@+id/bt_profile_edit"
        style="@style/buttons_style"
        android:layout_width="60dp"
        android:layout_height="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:drawableStart="@drawable/ic_edit_blue_grey_24dp"
        android:onClick="enter_edit_mode"
        android:text="@string/edit"
        android:textSize="@dimen/lowest_txt_size"
        android:textStyle="normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--profile details card view-->
    <android.support.v7.widget.CardView
        android:id="@+id/user_details_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/margin_small"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/bt_profile_edit">

        <android.support.constraint.ConstraintLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_profile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_tiny"
                android:text="@string/profile_details"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_tiny"
                android:textColor="@color/report_text"
                android:textStyle="italic"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Firstname input layout-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_profile_fn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:background="@drawable/input_border"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/input_profile_ln"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_label">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_fn"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:focusable="false"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"
                    android:longClickable="false" />

            </android.support.design.widget.TextInputLayout>

            <!--lastname input layout-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_profile_ln"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:background="@drawable/input_border"
                app:layout_constraintLeft_toRightOf="@id/input_profile_fn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_label">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_ln"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:focusable="false"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:longClickable="false" />

            </android.support.design.widget.TextInputLayout>


            <!--Home Address input layout-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_profile_homeAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:layout_marginEnd="@dimen/margin_tiny"
                android:background="@drawable/input_border"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/bt_profile_homeselector"
                app:layout_constraintTop_toBottomOf="@id/input_profile_fn">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_homeadd"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableStart="@drawable/ic_pin_drop_black_24dp"
                    android:focusable="false"
                    android:hint="@string/home_address"
                    android:inputType="textMultiLine"
                    android:longClickable="false"
                    android:maxLines="2" />

            </android.support.design.widget.TextInputLayout>

            <!--Home button-->
            <Button
                android:id="@+id/bt_profile_homeselector"
                style="@style/buttons_style"
                android:layout_width="60dp"
                android:layout_height="@dimen/margin_large"
                android:layout_margin="@dimen/margin_tiny"
                android:drawableStart="@drawable/ic_touch_app_black_24dp"
                android:gravity="center_vertical"
                android:onClick="Address_picker_update"
                android:text="@string/map"
                android:textSize="@dimen/lowest_txt_size"
                android:textStyle="normal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/input_profile_homeAdd"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <!--Contacts card view-->
    <android.support.v7.widget.CardView
        android:id="@+id/emergency_contacts_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/margin_small"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/user_details_card">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:layout_marginBottom="@dimen/margin_tiny">

            <TextView
                android:id="@+id/tv_emergency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_tiny"
                android:text="@string/emergency_contact_number_s"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Add button-->
            <Button
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/bt_profile_add"
                style="@style/small_button"
                android:layout_margin="@dimen/margin_tiny"
                android:background="@drawable/add_layer"
                android:onClick="add_ice_contact"
                app:layout_constraintRight_toRightOf="parent"
                />

            <android.support.v7.widget.RecyclerView
                android:animateLayoutChanges="false"
                android:id="@+id/recycler_profile_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/tv_emergency_label" />

            <ImageView
                android:id="@+id/iv_profile_logo"
                android:layout_width="@dimen/police_dim"
                android:layout_height="@dimen/police_dim"
                android:alpha="0.2"
                android:contentDescription="@string/profile_animation"
                android:scaleType="fitXY"
                android:src="@drawable/portal_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <!--save button-->
    <Button
        android:id="@+id/bt_profile_save"
        style="@style/buttons_style"
        android:layout_width="70dp"
        android:layout_height="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_small"
        android:drawableStart="@drawable/ic_save_blue_grey_24dp"
        android:onClick="Details_update_save"
        android:text="@string/save"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emergency_contacts_card"
        />


</android.support.constraint.ConstraintLayout>